feat: new color

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
     --color-muted: #a0a0a0;
 
     /* Accent */
-    --color-accent: #c97cff;
+    --color-accent: #e06543;
     --color-accent-hover: #b36aff;
 
     /* UI */
