--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
 
     /* Accent */
     --color-accent: #e06543;
-    --color-accent-hover: #b36aff;
+    --color-accent-hover: #ca593a;
 
     /* UI */
     --color-border: #2a2a2a;
