feat: home page improvment

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <p>2026 Isaac Cerejo — isaac.dev.games@email.com</p>
+    <p>2026 Isaac Cerejo — AAATUM</p>
 </footer>
 
 <style>
