--- a/css/about.css
+++ b/css/about.css
@@ -47,6 +47,7 @@
 
 /* Skills */
 .skills-list {
+    list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 0.6rem;
