--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,7 +1,7 @@
 <header>
     <div class="navbar">
-        <a href="index.html" class="logo">AAATUM GAMES</a>
-
+        <a href="index.html" class="logo">AAATUM</a>
+        <button class="menu-toggle" aria-label="Open menu">☰</button>
         <nav>
             <ul>
                 <li><a href="index.html" data-page="index">Home</a></li>
@@ -12,5 +12,9 @@
 
             </ul>
         </nav>
+        
     </div>
 </header>
+
+
+
