--- a/css/main.css
+++ b/css/main.css
@@ -7,25 +7,28 @@
 
 :root {
     /* Core colors */
-    --color-bg: #0f0f0f;
-    --color-surface: #181818;
-    --color-text: #eaeaea;
-    --color-muted: #a0a0a0;
+    --color-bg: #e6e4e4;
+    --color-surface: #bdbbbb;
+    --color-text: #111111;
+    --color-muted: #383232;
 
     /* Accent */
-    --color-accent: #e06543;
-    --color-accent-hover: #ca593a;
+    --color-accent: #0D6C7C;
+    --color-accent-hover: #0a5765;
 
-    /* UI */
-    --color-border: #2a2a2a;
+    --navbar-height: 72px;
 }
 
 
+h1 {
+    font-weight: 800;
 
+}
 /* Base */
 body {
-    padding-top: 80px;
+    padding-top: var(--navbar-height);
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
     background-color: var(--color-bg);
     color: var(--color-text);
 }
@@ -35,6 +38,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    height: var(--navbar-height);
     width: 100%;
 
     background-color: var(--color-surface);
@@ -42,19 +46,22 @@ header {
 }
 
 
+
 .navbar {
     max-width: 1200px;
+    height: 100%;
     margin: 0 auto;
-    padding: 1rem 1.5rem;
+    padding: 0 1.5rem;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+
 .logo {
-    font-size: 1.25rem;
-    font-weight: bold;
+    font-size: 1.1rem;
+    font-weight: 800;
     color: var(--color-text);
     text-decoration: none;
 }
@@ -76,20 +83,6 @@ nav a.active {
     color: var(--color-accent);
 }
 
-/* Responsive Navbar */
-@media (max-width: 768px) {
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 1rem;
-    }
-
-    nav ul {
-        width: 100%;
-        justify-content: space-between;
-    }
-}
-
 .intro {
     text-align: center;
     margin-bottom: 4rem;
@@ -105,3 +98,48 @@ nav a.active {
     margin: 0 auto;
     color: var(--color-text);
 }
+
+.menu-toggle {
+    display: none;
+    font-size: 1.5rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: var(--color-text);
+}
+
+/* Responsive Navbar */
+@media (max-width: 768px) {
+
+    nav {
+        position: fixed;
+        top: var(--navbar-height);
+        right: 0;
+        width: 130px;
+        height: calc(100vh - var(--navbar-height));
+
+        background-color: var(--color-surface);
+
+        transform: translateX(100%);
+        transition: transform 0.3s ease;
+    }
+
+    nav.open {
+        transform: translateX(0);
+    }
+
+    nav ul {
+        flex-direction: column;
+        padding: 1.5rem;
+        gap: 1.25rem;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+
+}
+
+
+
+
