--- a/components/navbar.html
+++ b/components/navbar.html
@@ -7,7 +7,8 @@
         <nav>
             <ul>
                 <li><a href="index.html" data-page="index">Home</a></li>
-                <li><a href="portfolio.html" data-page="portfolio">Portfolio</a></li>
+                <!-- Portfolio in Stand By
+                <li><a href="portfolio.html" data-page="portfolio">Portfolio</a></li>-->
                 <li><a href="games.html" data-page="games">Games</a></li>
                 <li><a href="about.html" data-page="about">About</a></li>
                 <li><a href="contact.html" data-page="contact">Contact</a></li>
