--- a/css/games.css
+++ b/css/games.css
@@ -1,19 +1,13 @@
 .games-page {
-    max-width: 1400px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 2rem 1.5rem;
-}
-
-.games-title {
-    text-align: center;
-    font-size: 2.2rem;
-    margin-bottom: 2rem;
 }
 
 .games-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 1.5rem;
+    gap: 1.4rem;
 }
 
 .game-card {
@@ -21,7 +15,7 @@
     aspect-ratio: 1 / 1;
     background-size: cover;
     background-position: center;
-    border-radius: 14px;
+    border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
 
@@ -29,14 +23,14 @@
 }
 
 .game-card:hover {
-    transform: scale(1.02);
-    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.5);
+    transform: scale(0.97);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .game-overlay {
     position: absolute;
     inset: 0;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.7);
 
     display: flex;
     flex-direction: column;
@@ -46,29 +40,19 @@
     opacity: 0;
     transition: opacity 0.25s ease;
     text-align: center;
+    color: white;
 }
 
-
-.game-card:hover {
-    transform: scale(1.04);
-    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.5);
+.game-overlay h3 {
+    font-family: var(--font-bold);
+    padding-bottom: 0.5rem;
+    font-size: 1.5rem;
 }
 
 
 .game-card:hover .game-overlay {
     opacity: 1;
 }
-
-
-.game-card:hover .game-overlay h3 {
-    color: white;
-}
-
-.game-card:hover .game-overlay p {
-    color: white;
-}
-
-
 
 
 
@@ -84,21 +68,21 @@
     padding: 0.4rem 0.9rem;
     font-size: 0.85rem;
     border-radius: 999px;
-    background-color: var(--color-bg);
-    color: var(--color-text);
+    background-color: var(--color-1);
+    color: var(--color-6);
     border: none;
     cursor: pointer;
     transition: background 0.2s ease, color 0.2s ease;
 }
 
 .filter-btn:hover {
-    background-color: var(--color-accent-hover);
+    background-color: var(--color-2);
 }
 
 
 .filter-btn.active {
-    background-color: var(--color-accent);
-    color: var(--color-bg);
+    background-color: var(--color-3);
+    color: var(--color-6);
 }
 
 .game-link {
