--- a/css/home.css
+++ b/css/home.css
@@ -21,11 +21,13 @@
 }
 
 .profile-pic {
-    width: 160px;
-    height: 160px;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    border: 3px solid var(--color-text);
+    /* border: 3px solid var(--color-6); */
 }
 
 .home-intro h1 {
@@ -35,12 +37,12 @@
 
 .home-intro h2 {
     font-size: 1.2rem;
-    color: var(--color-muted);
+    color: var(--color-5);
 }
 
 .home-intro .intro {
     max-width: 600px;
-    color: var(--color-muted);
+    color: var(--color-4);
 }
 
 
@@ -56,14 +58,14 @@
 
 .home-card {
     aspect-ratio: 1 / 1;
-    background-color: var(--color-surface);
+    background-color: var(--color-2);
 
     display: flex;
     align-items: center;
     justify-content: center;
 
     text-decoration: none;
-    color: var(--color-text);
+    color: var(--color-6);
 
     font-weight: 700;
     letter-spacing: 0.08em;
@@ -76,7 +78,7 @@
 }
 
 .home-card:hover {
-    background-color: var(--color-accent);
+    background-color: var(--color-3);
     color: white;
     transform: translateY(-4px);
 }
